# IMT2531-Graphics-Programming-Exam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EVA/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  ComponentMap.cpp  ComponentMap.hpp  ConstPointer.hpp  FileSystem.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  OBJLoader.cpp  OBJLoader.hpp  Physics.cpp  Physics.hpp  Scene.cpp  Scene.hpp  SceneEditor.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  (+11 more)
EVA/Components/: BoxCollider.cpp  BoxCollider.hpp  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  FollowTarget.cpp  FollowTarget.hpp  FreeLook.cpp  FreeLook.hpp  HideOnStart.cpp  HideOnStart.hpp  MeshRenderer.cpp  MeshRenderer.hpp  SceneCamera.hpp  Transform.cpp  Transform.hpp  Transformer.cpp  Transformer.hpp
EVA/Editor/: ComponentInspector.hpp  EditorWindows.cpp  EditorWindows.cpp~RF14c31fe.TMP  EditorWindows.cpp~RF14eb127.TMP  EditorWindows.cpp~RF1510e7f.TMP  EditorWindows.cpp~RF1523423.TMP  EditorWindows.cpp~RF15355ef.TMP  EditorWindows.cpp~RF1540b25.TMP  EditorWindows.cpp~RF1585ccc.TMP  EditorWindows.cpp~RF24ea581.TMP  EditorWindows.cpp~RF2565854.TMP  EditorWindows.cpp~RFeab2051.TMP  EditorWindows.cpp~RFeab2c86.TMP  EditorWindows.cpp~RFeab93ea.TMP  EditorWindows.hpp  FileSystem.hpp  SceneEditor.hpp
EVA/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
EVA/Parsers/: GameObjectParser.hpp  Json.hpp  MaterialParser.hpp  PrefabParser.hpp  SceneParser.hpp  ShaderParser.hpp
EVA/TestScenes/: Transforms.hpp  UiTest.hpp
EVA/UI/: BoundingBox.hpp  Button.cpp  Button.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  Padding.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Text.cpp  Text.hpp  UiElement.cpp  UiElement.hpp
EVA/include/: EVA.hpp
EVA/include/EVA/: Components.hpp  Graphics.hpp  Input.hpp  OpenGL.hpp  Parsers.hpp  Physics.hpp  ResourceManagers.hpp  SceneManager.hpp  UI.hpp
TestScenes/: ParserTest.hpp  Transforms.hpp
TestScenes/Pacman/: Game.cpp  Game.hpp  GameOverScene.hpp  Ghost.cpp  Ghost.hpp  GhostVariations.hpp  Pacman.cpp  Pacman.hpp  Pellet.cpp  Pellet.hpp  TileMap.cpp  TileMap.hpp
assets/: Grid.ai
assets/ame_ash/: down.tga  up.tga
assets/levels/: format.md  level1.txt
assets/materials/: grid.mat  template.mat.json  terrain.mat  uv.mat
assets/models/: arrow.blend  arrow.blend1  arrow.fbx  ask21mi.blend  ask21mi.blend1  ask21mi.fbx  ghost.mtl
assets/models/glider/: ask21mi.blend  ask21mi.blend1  ask21mi.fbx
assets/models/glider/materials/: alt.mat  asi.mat  body.mat  chrono.mat  compass.mat  interior.mat  sc.mat  string.mat  turn.mat  varo.mat
assets/models/materials/: alt.mat  asi.mat  body.mat  chrono.mat  compass.mat  interior.mat  sc.mat  string.mat  turn.mat  varo.mat
assets/models/oak/: Bark.mat  Leafs.mat  Oak.fbx
assets/models/spruce/: Spruce.fbx  branches.mat  trunk.mat
assets/prefabs/: freelookcamera.prefab  template.prefab.json  uvcube.prefab
assets/primitives/: primitives.blend  primitives.blend1
assets/scenes/: cubes.scene  main.scene  point.scene  template.scene.json
assets/shaders/: shadow_cube.frag  shadow_cube.vert  shadow_cube_instanced.vert  shadow_instanced.vert  sprite.vert  standard.frag  standard.vert  standard_instanced.frag  standard_instanced.vert  terrain.frag  terrain.shader  terrain.vert  texture.vert  unlit_texture.vert  unlit_texture_instanced.vert  water.frag  water.shader  water.vert
assets/standard assets/materials/: grid.mat  uv.mat
assets/standard assets/scenes/: template.scene
assets/standard assets/shaders/: shadow.frag  shadow.shader  shadow_cube.shader  shadow_cube_instanced.shader  shadow_instaced.shader  skybox.shader  sprite.shader  standard.shader  standard.vert  standard_instanced.frag  standard_instanced.shader  text.shader
assets/standard assets/shaders/source/: shadow_cube.geom  skybox.frag  skybox.vert  sprite.frag  standard.frag  standard.vert  standard_instanced.frag  standard_instanced.vert
assets/templates/: template.mat.json
assets/textures/: Button.ai
assets/tiles/: tiles.blend
dependencies/assimp/: CMakeLists.txt  Readme.md
dependencies/glfw/: CMakeLists.txt  COPYING.txt  README.md
dependencies/glm/: CMakeLists.txt  copying.txt  readme.md
dependencies/imgui/: imgui_impl_glfw_gl3.cpp
shaders/: color.frag  color.vert  standard.frag  standard.vert  texture.frag  unlit_texture.frag
source/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Cube.cpp  Cube.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameOverScene.hpp  Ghost.cpp  Ghost.hpp  GhostVariations.hpp  GlobalVars.hpp  Input.cpp  Input.hpp  Light.hpp  MainMenu.cpp  MainMenu.hpp  Material.cpp  Material.hpp  Menu.cpp  Menu.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OBJLoader.cpp  OBJLoader.hpp  Pacman.cpp  Pacman.hpp  PauseMenu.hpp  Pellet.cpp  Pellet.hpp  Primitive.cpp  Primitive.hpp  Scene.cpp  (+22 more)
source/Components/: CameraController.cpp  CameraController.hpp  EnviromentManager.cpp  EnviromentManager.hpp  GliderController.hpp  Glidercontroller.cpp  Terrain.cpp  Terrain.hpp  Water.cpp  Water.hpp
source/EVA-Engine/: Application.cpp  Application.hpp  Camera.hpp  Component.hpp  GameObject.hpp  GlobalVars.hpp  Light.hpp  Material.cpp  Material.hpp  Menu.cpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  OBJLoader.cpp  OBJLoader.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  TextureManager.hpp
